added modal use-state and get/post

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap');
 @import "tailwindcss";
+
+@theme {
+  --font-unbounded: "Unbounded", sans-serif;
+}
